# usuterram

./: .gitignore  README.md
cpp/humility/: README.md
cpp/humility/session01/: CMakeLists.txt
cpp/humility/session01/src/: main.cpp
cpp/humility/session02/src/: main.cpp
cpp/humility/session03/src/: main.cpp
cpp/humility/session04/src/: main.cpp
cpp/humility/session0x/: CMakeLists.txt
cpp/humility/session0x/src/: CMakeLists.txt  call.cpp  cond_pc.cpp  deadlock.cpp  main.cpp  main_s1.cpp  main_s2.cpp  main_s2b.cpp  naive_pc.cpp
cpp/initcrtp/doc/: README.md
cpp/initcrtp/src/: CMakeLists.txt
cpp/initcrtp/src/include/: InitCRTP.hpp
cpp/initcrtp/src/tool1/: CMakeLists.txt  Tool1.cpp
cpp/static_registry/doc/: README.md
cpp/static_registry/src/: CMakeLists.txt
cpp/static_registry/src/include/: PluginBase.hpp  PluginRegistrar.hpp  PluginRegistry.hpp  UnitBase.hpp
cpp/static_registry/src/lib/: CMakeLists.txt  PluginRegistry.cpp
cpp/static_registry/src/plugin1/: CMakeLists.txt  Plugin1.cpp
cpp/static_registry/src/plugin2/: CMakeLists.txt  Plugin2.cpp
cpp/static_registry/src/tool1/: CMakeLists.txt  Tool1.cpp
llvm/dependencies-pass/: CMakeLists.txt
llvm/dependencies-pass/doc/notes/: pass_runs.md
llvm/dependencies-pass/pass/: CMakeLists.txt  MyPasses.cpp
llvm/examples/bare/: bare.bc  bare.c  bare.ll
llvm/examples/bareless/: bareless.bc  bareless.c  bareless.ll
llvm/examples/loop01/: loop01.bc  loop01.c  loop01.ll
llvm/hello/: CMakeLists.txt  HelloPass.cpp
llvm/hellopimpl/: CMakeLists.txt  HelloWorldPass.cpp  HelloWorldPass.hpp  HelloWorldPassImpl.cpp  HelloWorldPassImpl.hpp
llvm/hellopimpl/utils/cmake/scripts/: build.sh
llvm/hellopimpl2/: CMakeLists.txt  HelloWorldPass.cpp  HelloWorldPassImpl.cpp  HelloWorldPassImpl.hpp
llvm/looper/: CMakeLists.txt  LooperPass.cpp
muchnick/ch07/: ch07.py  dom_comp.py  idom_comp.py  postdominators.py  predecessors.py  reverse.py  reverse_graph.py  utilities.py
